--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -29,11 +29,19 @@
     <ImageButton
         android:id="@+id/JoystickButton"
         android:layout_width="70dp"
-        android:layout_height="140dp"
+        android:layout_height="70dp"
         android:layout_gravity="left|bottom"
         android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
         android:background="@drawable/joystick"
         android:onClick="onJoystickButtonCick" />
 
+    <ImageButton
+        android:id="@+id/FriendsButton"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_gravity="left|top"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="10dp"
+        android:background="@drawable/friends" />
 </fragment>
